<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/swingAnalyzer"
        android:icon="@drawable/ic_videocam_white"
        android:title="@string/button2"
        android:enabled="true"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/homeActivity"
        android:icon="@drawable/ic_home_white"
        android:title="@string/button1"
        android:enabled="true"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/training"
        android:icon="@drawable/ic_golf_course_white"
        android:title="@string/button3"
        android:enabled="true"
        app:showAsAction="ifRoom"
        />

</menu>
